Point hardcoded URLs to oauth2-dummy-endpoint.onrender.com
